k8s/cccr-arg-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: cccr-arg-pod
spec:
  containers:
  - image: c1t1d0s7/cccr
    name: cccr
    args:
    - "Customized hello world"
    ports:
    - containerPort: 8080
      protocol: TCP
