k8s/cccr-comp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cccr-comp
spec:
  containers:
  - image: nginx
    name: cccr-comp
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: nginx-config
    configMap:
      name: gzip-nginx-config
