k8s/cccr-configmap-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cccr-configmap-pod
spec:
  containers:
  - image: c1t1d0s7/cccr:custport
    name: cccr
    args:
    - $(MESSAGE)
    ports:
    - containerPort: 8080
      protocol: TCP
