k8s/cccr-deployment-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cccr
  labels:
    app: cccr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cccr
  template:
    metadata:
      labels:
        app: cccr
    spec:
      containers:
      - image: c1t1d0s7/cccr:v3
        name: cccr-cont
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 1
          httpGet:
            path: /
            port: 8080
