k8s/cccr-env-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cccr-env-pod
spec:
  containers:
  - image: c1t1d0s7/cccr:custport
    name: cccr
    ports:
    - containerPort: 8088
      protocol: TCP
