k8s/cccr-https-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cccr-https
spec:
  containers:
  - image: nginx
    name: cccr-https
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d
    - name: https-cert
      mountPath: /etc/nginx/ssl
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
    - containerPort: 443
      protocol: TCP
  volumes:
  - name: nginx-config
    configMap:
      name: tls-nginx-config
  - name: https-cert
    secret:
      secretName: nginx-tls-secret
