k8s/cccr-liveness-404-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: cccr-liveness-404-pod
spec:
  containers:
  - image: c1t1d0s7/cccr
    name: cccr
    ports:
    - containerPort: 8081
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /
        port: 8082
