k8s/cccr-liveness-pod.yml
---
apiVersion: v1
kind: Pod
metadata: 
  name: cccr-liveness-pod
spec:
  containers:
  - image: c1t1d0s7/cccr
    name: cccr
    ports:
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /
        port: 8080
