k8s/cccr-test.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: cccr
    env: cccr
spec:
  containers:
    - name: cccr
      image: c1t1d0s7/cccr
      ports:
      - containerPort: 8080
