k8s/cccr-emptydir-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cccr-fortune
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cccr
