k8s/cccr-ext-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: cccr-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cccr
