k8s/cccr-headless-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: cccr-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cccr
