k8s/cccr-hostpath-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: cccr-hostpath
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cccr
