k8s/cccr-named-port-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cccr
spec:
  ports:
  - name: cccr-svc-http
    port: 80
    targetPort: cccr-http
  selector:
    app: cccr
