k8s/cccr-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: cccr
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cccr
