k8s/cccr-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: cccr-ingress
spec:
  rules:
  - host: cccr.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cccr-nodeport
          servicePort: 80
